--- a/roke-art/public/index.html
+++ b/roke-art/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Roke Muna Art</title>
 
     <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
     <script>
@@ -41,6 +41,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
+
   </body>
 </html>
