--- a/roke-art/public/index.html
+++ b/roke-art/public/index.html
@@ -12,12 +12,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.23/angular-ui-router.js" integrity="sha256-tUk3dkdAhTJciptoGlnQ39zDSTVml94l1SLPlzKDovM=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js" integrity="sha256-6vbKDGwy9JmzGKxxeypGzCjyOmACDtgheaOQT6ZVafA=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,700&display=swap" rel="stylesheet">
     <link href="/style.css" rel="stylesheet">
+
 
     <!-- JS Files -->
     <script src="/js/app.js"></script>
     <script src="/js/data.js"></script>
     <script src="/js/routes.js"></script>
+    <script src="/js/gallery.js"></script>
 
     <title>Roke Muna Art</title>
 
@@ -39,21 +42,24 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div ng-controller="ApplicationController" class="roke-container">
-      <div class="navigation">
-        <ul>
-          <li>
-            <a ui-sref="home" ui-sref-active="activeState">Home</a>
-          </li>
-          <li>
-            <a ui-sref="gallery" ui-sref-active="activeState">Gallery</a>
-          </li>
-          <li>
-            <a ui-sref="about" ui-sref-active="activeState">About</a>
-          </li>
-          <li>
-            <a ui-sref="contact" ui-sref-active="activeState">Contact Us</a>
-          </li>
-        </ul>
+      <div class="title-container">
+        <div class="navigation">
+          <ul>
+            <li>
+              <a ui-sref="home" ui-sref-active="activeState">Home</a>
+            </li>
+            <li>
+              <a ui-sref="gallery" ui-sref-active="activeState">Gallery</a>
+            </li>
+            <li>
+              <a ui-sref="about" ui-sref-active="activeState">About</a>
+            </li>
+            <li>
+              <a ui-sref="contact" ui-sref-active="activeState">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+        <h1>Roke Muna Art</h1>
       </div>
 
       <div ui-view></div>
