--- a/roke-art/public/index.html
+++ b/roke-art/public/index.html
@@ -13,16 +13,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js" integrity="sha256-6vbKDGwy9JmzGKxxeypGzCjyOmACDtgheaOQT6ZVafA=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,700&display=swap" rel="stylesheet">
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
-    <link href="/style.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
 
+    <link href="/style.css" rel="stylesheet">
 
     <!-- JS Files -->
     <script src="/js/app.js"></script>
     <script src="/js/data.js"></script>
     <script src="/js/routes.js"></script>
     <script src="/js/gallery.js"></script>
+    <script src="/js/header.js"></script>
     <script src="/js/home.js"></script>
 
     <title>Roke Muna Art</title>
@@ -44,28 +45,14 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <div ng-controller="ApplicationController" class="roke-container">
-      <div class="title-container">
-        <div class="navigation">
-          <ul>
-            <li>
-              <a ui-sref="home" ui-sref-active="activeState">Home</a>
-            </li>
-            <li>
-              <a ui-sref="gallery" ui-sref-active="activeState">Gallery</a>
-            </li>
-            <li>
-              <a ui-sref="about" ui-sref-active="activeState">About</a>
-            </li>
-            <li>
-              <a ui-sref="contact" ui-sref-active="activeState">Contact Us</a>
-            </li>
-          </ul>
-        </div>
-        <h1>Roke Muna Art</h1>
-      </div>
+    <div ng-controller="ApplicationController">
+      <!-- navigation bar -->
+      <div ui-view name="header" class="header"></div>
+      <!-- Main views -->
+      <div ui-view name="content" class="content-container"></div>
+    </div>
 
-      <div ui-view></div>
+    <div class="footer">
     </div>
 
   </body>
