added new styling

--- a/roke-art/public/index.html
+++ b/roke-art/public/index.html
@@ -53,6 +53,24 @@
     </div>
 
     <div class="footer">
+      <strong><a class="footer-home" ui-sref="home">Roke Muna Art</a></strong>
+      <ul>
+        <li>
+          <a ui-sref="home">Home</a>
+        </li>
+        <li>|</li>
+        <li>
+          <a ui-sref="gallery">Gallery</a>
+        </li>
+        <li>|</li>
+        <li>
+          <a ui-sref="about">About</a>
+        </li>
+        <li>|</li>
+        <li>
+          <a ui-sref="contact">Contact Us</a>
+        </li>
+      </ul>
     </div>
 
   </body>
